--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -7,7 +7,7 @@
   background: var(--color-primary-600);
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 50;
 
   &__left {
     display: flex;
