--- a/src/styles.scss
+++ b/src/styles.scss
@@ -177,5 +177,5 @@ body {
   inset: 0;
   background: rgba(52, 64, 84, 0.6);
   backdrop-filter: blur(4px);
-  z-index: 105;
+  z-index: 9998;
 }
